--- a/Updater/MKUpdater.csproj
+++ b/Updater/MKUpdater.csproj
@@ -8,8 +8,8 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     <AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
-    <AssemblyName>Updater</AssemblyName>
-    <RootNamespace>Updater</RootNamespace>
+    <AssemblyName>MKUpdater</AssemblyName>
+    <RootNamespace>MKUpdater</RootNamespace>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -25,6 +25,9 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <DefineConstants>TRACE;X64</DefineConstants>
+    <ErrorReport>none</ErrorReport>
+    <DebugType>none</DebugType>
+    <DebugSymbols>false</DebugSymbols>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x86'">
@@ -34,10 +37,6 @@
 
   <ItemGroup>
     <PackageReference Include="Gettext.Tools" Version="0.21.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\MagicKeys\MagicKeys.csproj" />
   </ItemGroup>
 
   <ItemGroup>
