Added save info developer tool. Added save image in developer tool

--- a/DeveloperTool/DeveloperTool.csproj
+++ b/DeveloperTool/DeveloperTool.csproj
@@ -31,6 +31,9 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x86'">
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <DefineConstants>TRACE;X86</DefineConstants>
+    <ErrorReport>none</ErrorReport>
+    <DebugType>none</DebugType>
+    <DebugSymbols>false</DebugSymbols>
   </PropertyGroup>
 
   <ItemGroup>
