--- a/MagicKeys/MagicKeys.csproj
+++ b/MagicKeys/MagicKeys.csproj
@@ -95,7 +95,7 @@
   <ItemGroup>
     <Compile Update="Forms\DebugForm.cs" />
     <Compile Update="Forms\DebugFormActions.cs" />
-    <Compile Update="Forms\InputMultiTextBox.cs">
+    <Compile Update="Forms\InputMultiTextBoxForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Update="Forms\InputMultiTextBoxActions.cs">
