--- a/MagicKeys/MagicKeys.csproj
+++ b/MagicKeys/MagicKeys.csproj
@@ -95,18 +95,10 @@
   <ItemGroup>
     <Compile Update="Forms\DebugForm.cs" />
     <Compile Update="Forms\DebugFormActions.cs" />
-    <Compile Update="Forms\InputMultiTextBoxForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Update="Forms\InputMultiTextBoxActions.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Update="Forms\InputTextBoxActions.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Update="Forms\InputTextBox.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Update="Forms\InputMultiTextBoxForm.cs" />
+    <Compile Update="Forms\InputMultiTextBoxActions.cs" />
+    <Compile Update="Forms\InputTextBoxActions.cs" />
+    <Compile Update="Forms\InputTextBox.cs" />
   </ItemGroup>
 
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
