Add VS Code tasks and batch files for building / cleaning projects

--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,9 @@ project.lock.json
 *.po~
 
 # Visual Studio Code
-.vscode
+.vscode/*
+!.vscode/launch.json
+!.vscode/tasks.json
 
 # User-specific files
 *.suo
