Added RegImport in ConfigInstaller

--- a/ConfigInstaller/ConfigInstaller.csproj
+++ b/ConfigInstaller/ConfigInstaller.csproj
@@ -4,6 +4,54 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UseWindowsForms>true</UseWindowsForms>
+	  <Platforms>x86;x64</Platforms>
+	  <RunAnalyzersDuringBuild>false</RunAnalyzersDuringBuild>
+	  <ApplicationManifest>app.manifest</ApplicationManifest>
+	  <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+	  <AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
+	  <RunPostBuildEvent>OnBuildSuccess</RunPostBuildEvent>
+	  <AssemblyName>ConfigInstaller</AssemblyName>
+<RootNamespace>ConfigInstaller</RootNamespace>
+<ApplicationIcon>Icon.ico</ApplicationIcon>
   </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <DefineConstants>TRACE;DEBUG;X64</DefineConstants>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x86'">
+    <DefineConstants>TRACE;DEBUG;X86</DefineConstants>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <DefineConstants>TRACE;X64</DefineConstants>
+    <ErrorReport>none</ErrorReport>
+    <DebugType>none</DebugType>
+    <DebugSymbols>false</DebugSymbols>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x86'">
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <DefineConstants>TRACE;X86</DefineConstants>
+    <ErrorReport>none</ErrorReport>
+    <DebugType>none</DebugType>
+    <DebugSymbols>false</DebugSymbols>
+  </PropertyGroup>
+
+<ItemGroup>
+    <PackageReference Include="Gettext.Tools" Version="0.21.0" />
+    <PackageReference Include="NGettext" Version="0.6.6" />
+  </ItemGroup>
+
+<Target Name="PostBuild" AfterTargets="PostBuildEvent">
+  <Exec Command="xcopy /e /i /q /y &quot;$(SolutionDir)Settings&quot; &quot;$(TargetDir)Settings&quot; &gt; nul" />
+</Target>
+
+	<Target Name="ProjectCleanup" AfterTargets="Clean">
+		<RemoveDir Directories="$(TargetDir)" />
+	</Target>
 
 </Project>
