Added coord for roland plugins...

--- a/Plugins/VUI/Tone2 Icarus/Manifest.ini
+++ b/Plugins/VUI/Tone2 Icarus/Manifest.ini
@@ -1,10 +1,10 @@
 [Info]
-Name=Octavox
+Name=Tone2 Icarus
 Author=Electrik & Outsider
 Mail=electrik-spb@mail.ru
-[Octavox]
+[Tone2 Icarus]
 PClass=MagicKeys
 BClass=None
-VUI=Octavox
-PluginName=Octavox
-Module=Octavox
+VUI=Icarus
+PluginName=Tone2 Icarus
+Module=Icarus
