Added support roland plugins

--- a/Plugins/VUI/Roland JUPITER-8/Manifest.ini
+++ b/Plugins/VUI/Roland JUPITER-8/Manifest.ini
@@ -1,10 +1,10 @@
 [Info]
-Name=JUPITER-8
+Name=Roland JUPITER-8
 Author=Electrik
 Mail=electrik-spb@mail.ru
-[JUPITER-8]
+[Roland JUPITER-8]
 PClass=MagicKeys
 BClass=None
 VUI=JUPITER-8
-PluginName=JUPITER-8
+PluginName=Roland JUPITER-8
 Module=JUPITER-8
