--- a/Plugins/VUI/u-he Repro-1/Manifest.ini
+++ b/Plugins/VUI/u-he Repro-1/Manifest.ini
@@ -1,10 +1,10 @@
 [Info]
-Name=Repro-1
+Name=u-he Repro-1
 Author=Electrik & Outsider
 Mail=electrik-spb@mail.ru
-[Repro-1]
+[u-he Repro-1]
 PClass=MagicKeys
 BClass=None
 VUI=Repro-1
-PluginName=Repro-1
+PluginName=u-he Repro-1
 Module=Repro-1
