--- a/MKUpdater/MKUpdater.csproj
+++ b/MKUpdater/MKUpdater.csproj
@@ -66,7 +66,7 @@
     <Exec Command="set distdir=$(SolutionDir)Dist\$(PlatformName)&#xD;&#xA;xcopy /e /i /q /y &quot;%25distdir%25\Locale&quot; &quot;$(TargetDir)Locale&quot; &gt; nul&#xD;&#xA;xcopy /e /i /q /y &quot;$(SolutionDir)Sounds&quot; &quot;$(TargetDir)Sounds&quot; &gt; nul" />
   </Target>
 
-  <Target Name="ProjectCleanup" AfterTargets="Clean">
+  <Target Name="ProjectCleanup" BeforeTargets="PreBuildEvent" AfterTargets="Clean">
     <RemoveDir Directories="$(TargetDir)" />
   </Target>
 
