Added support kick 1, kick 2, RGC Audio sfz,  Zynaptiq UNFILTER

--- a/Plugins/VUI/RGC Audio sfz/Manifest.ini
+++ b/Plugins/VUI/RGC Audio sfz/Manifest.ini
@@ -1,10 +1,10 @@
 [Info]
-Name=UNFILTER
+Name=RGC Audio sfz
 Author=Electrik & Outsider
 Mail=electrik-spb@mail.ru
-[UNFILTER]
+[RGC Audio sfz]
 PClass=MagicKeys
 BClass=None
-VUI=UNFILTER
-PluginName=UNFILTER
-Module=UNFILTER
+VUI=sfz
+PluginName=RGC Audio sfz
+Module=sfz
