--- a/Plugins/VUI/Sonic Academy KICK Nicky Romero Edition/Manifest.ini
+++ b/Plugins/VUI/Sonic Academy KICK Nicky Romero Edition/Manifest.ini
@@ -1,10 +1,10 @@
 [Info]
-Name=KICK Nicky Romero Edition
+Name=Sonic Academy KICK Nicky Romero Edition
 Author=Electrik & Outsider
 Mail=electrik-spb@mail.ru
-[KICK Nicky Romero Edition]
+[Sonic Academy KICK Nicky Romero Edition]
 PClass=MagicKeys
 BClass=None
 VUI=KICK Nicky Romero Edition
-PluginName=KICK Nicky Romero Edition
+PluginName=Sonic Academy KICK Nicky Romero Edition
 Module=KICK Nicky Romero Edition
