--- a/Plugins/VUI/Sonic Academy Kick 2/Manifest.ini
+++ b/Plugins/VUI/Sonic Academy Kick 2/Manifest.ini
@@ -1,10 +1,10 @@
 [Info]
-Name=Kick 2
+Name=Sonic Academy Kick 2
 Author=Electrik & Outsider
 Mail=electrik-spb@mail.ru
-[Kick 2]
+[Sonic Academy Kick 2]
 PClass=MagicKeys
 BClass=None
 VUI=Kick 2
-PluginName=Kick 2
+PluginName=Sonic Academy Kick 2
 Module=Kick 2
