Fix save image in developer tool

--- a/Plugins/DLL/Xfer Records Serum/Manifest.ini
+++ b/Plugins/DLL/Xfer Records Serum/Manifest.ini
@@ -1,10 +1,10 @@
 [Info]
-Name=Serum
+Name=Xfer Records Serum
 Author=Viruzober
 Mail=Den-viruzober@yandex.ru
-[Serum]
+[Xfer Records Serum]
 PClass=Serum
 BClass=None
 VUI=Serum
-PluginName=Serum
+PluginName=Xfer Records Serum
 Module=Serum
