Not kyka commit...

--- a/Plugins/Sylenth1/Manifest.ini
+++ b/Plugins/Sylenth1/Manifest.ini
@@ -3,10 +3,8 @@ Name=Sylenth1
 Author=Electrik & Outsider
 Mail=electrik-spb@mail.ru
 [Sylenth1]
-WTitle=txt
-WClass=Notepad
 PClass=MagicKeys
 BClass=None
 VUI=Sylenth1
 PluginName=Sylenth1
-Module=NOTE
+Module=Sylenth1
