The definitive 100% broken commit!

--- a/Plugins/VUI/Sylenth1/Manifest.ini
+++ b/Plugins/VUI/Sylenth1/Manifest.ini
@@ -3,7 +3,7 @@ Name=Sylenth1
 Author=Electrik & Outsider
 Mail=electrik-spb@mail.ru
 [Sylenth1]
-WTitle=txt
+WTitle=Блокнот
 WClass=Notepad
 PClass=MagicKeys
 BClass=None
