Delete functions in core

--- a/MagicKeys/MagicKeys.csproj
+++ b/MagicKeys/MagicKeys.csproj
@@ -68,6 +68,7 @@
 
   <ItemGroup>
     <Compile Remove="Core\Common\SendKey.cs" />
+    <Compile Remove="Core\Window\WinExists.cs" />
   </ItemGroup>
 
   <ItemGroup>
