Ad support 2 plugin

--- a/Plugins/VUI/Spire/Manifest.ini
+++ b/Plugins/VUI/Spire/Manifest.ini
@@ -7,10 +7,10 @@ PClass=MagicKeys
 BClass=None
 VUI=Spire-1.1
 PluginName=Spire
-Module=Spire_x64_V1.1
+Module=Spire
 [Spire-1.1]
 PClass=MagicKeys
 BClass=None
 VUI=Spire-1.1
 PluginName=Spire
-Module=Spire-1.1
+Module=Spire
