added support Tone2 RayBlaster

--- a/Plugins/VUI/Tone2 Gladiator/Manifest.ini
+++ b/Plugins/VUI/Tone2 Gladiator/Manifest.ini
@@ -1,7 +1,7 @@
 [Info]
 Name=Tone2 Gladiator
-Author=Electrik & Outsider
-Mail=electrik-spb@mail.ru
+Author=NikitaK
+Mail=kolokolchicov.n@gmail.com
 [Tone2 Gladiator]
 PClass=MagicKeys
 BClass=None
