--- a/Plugins/VUI/Tone2 RayBlaster/Manifest.ini
+++ b/Plugins/VUI/Tone2 RayBlaster/Manifest.ini
@@ -1,7 +1,7 @@
 [Info]
 Name=Tone2 RayBlaster
-Author=Electrik & Outsider
-Mail=electrik-spb@mail.ru
+Author=NikitaK
+Mail=kolokolchicov.n@gmail.com
 [Tone2 RayBlaster]
 PClass=MagicKeys
 BClass=None
