--- a/Plugins/VUI/Xfer Records LFOTool/Manifest.ini
+++ b/Plugins/VUI/Xfer Records LFOTool/Manifest.ini
@@ -1,7 +1,7 @@
 [Info]
 Name=Xfer Records LFOTool
-Author=Electrik & Outsider
-Mail=electrik-spb@mail.ru
+Author=NikitaK
+Mail=kolokolchicov.n@gmail.com
 [Xfer Records LFOTool]
 PClass=MagicKeys
 BClass=None
