--- a/Plugins/VUI/LennarDigital Sylenth1/Manifest.ini
+++ b/Plugins/VUI/LennarDigital Sylenth1/Manifest.ini
@@ -1,7 +1,7 @@
 [Info]
 Name=LennarDigital Sylenth1
-Author=Electrik & Outsider
-Mail=electrik-spb@mail.ru
+Author=Viruzober
+Mail=Den-viruzober@yandex.ru
 [LennarDigital Sylenth1]
 PClass=MagicKeys
 BClass=None
