--- a/Plugins/VUI/Sonic Academy ANA/Manifest.ini
+++ b/Plugins/VUI/Sonic Academy ANA/Manifest.ini
@@ -1,7 +1,7 @@
 [Info]
 Name=Sonic Academy ANA
-Author=Electrik & Outsider
-Mail=electrik-spb@mail.ru
+Author=Viruzober
+Mail=Den-viruzober@yandex.ru
 [Sonic Academy ANA]
 PClass=MagicKeys
 BClass=None
