--- a/Plugins/VUI/Sonic Academy KICK Nicky Romero Edition/Manifest.ini
+++ b/Plugins/VUI/Sonic Academy KICK Nicky Romero Edition/Manifest.ini
@@ -1,7 +1,7 @@
 [Info]
 Name=Sonic Academy KICK Nicky Romero Edition
-Author=Electrik & Outsider
-Mail=electrik-spb@mail.ru
+Author=Viruzober
+Mail=Den-viruzober@yandex.ru
 [Sonic Academy KICK Nicky Romero Edition]
 PClass=MagicKeys
 BClass=None
