--- a/Plugins/VUI/Synapse Audio DUNE/Manifest.ini
+++ b/Plugins/VUI/Synapse Audio DUNE/Manifest.ini
@@ -1,7 +1,7 @@
 [Info]
 Name=Synapse Audio DUNE
-Author=Electrik & Outsider
-Mail=electrik-spb@mail.ru
+Author=Viruzober
+Mail=Den-viruzober@yandex.ru
 [Synapse Audio DUNE 2]
 PClass=MagicKeys
 BClass=None
