--- a/Plugins/VUI/Toontrack EZKeys/Manifest.ini
+++ b/Plugins/VUI/Toontrack EZKeys/Manifest.ini
@@ -1,7 +1,7 @@
 [Info]
 Name=Toontrack EZKeys
-Author=Electrik & Outsider
-Mail=electrik-spb@mail.ru
+Author=NikitaK
+Mail=kolokolchicov.n@gmail.com
 [Toontrack EZKeys]
 PClass=MagicKeys
 BClass=None
