--- a/Plugins/VUI/Tone2 Electra/Manifest.ini
+++ b/Plugins/VUI/Tone2 Electra/Manifest.ini
@@ -1,7 +1,7 @@
 [Info]
 Name=Tone2 Electra
-Author=Electrik & Outsider
-Mail=electrik-spb@mail.ru
+Author=Viruzober
+Mail=Den-viruzober@yandex.ru
 [Tone2 Electra]
 PClass=MagicKeys
 BClass=None
