--- a/Plugins/VUI/Tone2 Saurus/Manifest.ini
+++ b/Plugins/VUI/Tone2 Saurus/Manifest.ini
@@ -1,7 +1,7 @@
 [Info]
 Name=Tone2 Saurus
-Author=Electrik & Outsider
-Mail=electrik-spb@mail.ru
+Author=Viruzober
+Mail=Den-viruzober@yandex.ru
 [Tone2 Saurus]
 PClass=MagicKeys
 BClass=None
