--- a/Plugins/VUI/Vember Audio Surge/Manifest.ini
+++ b/Plugins/VUI/Vember Audio Surge/Manifest.ini
@@ -1,7 +1,7 @@
 [Info]
 Name=Vember Audio Surge
-Author=Electrik & Outsider
-Mail=electrik-spb@mail.ru
+Author=NikitaK
+Mail=kolokolchicov.n@gmail.com
 [Vember Audio Surge]
 PClass=MagicKeys
 BClass=None
