--- a/MKUpdater/MKUpdater.csproj
+++ b/MKUpdater/MKUpdater.csproj
@@ -41,6 +41,10 @@
 
   <ItemGroup>
     <PackageReference Include="Gettext.Tools" Version="0.21.0" />
+    <PackageReference Include="GitInfo" Version="2.1.2">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="NGettext" Version="0.6.6" />
   </ItemGroup>
 
