--- a/Plugins/DLL/LUXONIX.Purity/LUXONIX Purity.csproj
+++ b/Plugins/DLL/LUXONIX.Purity/LUXONIX Purity.csproj
@@ -18,6 +18,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="GitInfo" Version="2.1.2">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\..\MagicKeys\MagicKeys.csproj" />
   </ItemGroup>
 
