--- a/.github/workflows/Nightly.yml
+++ b/.github/workflows/Nightly.yml
@@ -25,10 +25,10 @@ jobs:
       run: Scripts/PublishAll.cmd /ni
 
     - name: Upload to FTP
-      uses: SamKirkland/FTP-Deploy-Action@4.1.0
+      uses: sebastianpopp/ftp-action@releases/v2
       with:
-        server: ${{ secrets.FTPADDRESS }}
-        username: ${{ secrets.FTPUSER }}
+        host: ${{ secrets.FTPADDRESS }}
+        user: ${{ secrets.FTPUSER }}
         password: ${{ secrets.FTPPASSWORD }}
-        local-dir: Dist/Packages/
-        server-dir: Nightlies/
+        localDir: Dist/Packages/
+        remoteDir: Nightlies/
