--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -23,10 +23,11 @@ jobs:
       run: Scripts/PublishAll.cmd /ni
 
     - name: Upload to FTP
-      uses: sebastianpopp/ftp-action@releases/v2
+      uses: isthatcentered/dist-to-ftp@master
       with:
         host: ${{ secrets.FTPADDRESS }}
         user: ${{ secrets.FTPUSER }}
         password: ${{ secrets.FTPPASSWORD }}
-        localDir: Dist/Packages/
-        remoteDir: Releases/
+        path: Dist/Packages/
+        into: Releases/
+        cleanupExisting: false
