--- a/MKUpdater/MKUpdater.csproj
+++ b/MKUpdater/MKUpdater.csproj
@@ -46,6 +46,11 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="NGettext" Version="0.6.6" />
+    <PackageReference Include="Pluralize.NET.Core" Version="1.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MagicKeys\MagicKeys.csproj" />
   </ItemGroup>
 
   <ItemGroup>
