Further VUI syntax simplifications.

--- a/Plugins/DLL/LUXONIX.Purity/Manifest.ini
+++ b/Plugins/DLL/LUXONIX.Purity/Manifest.ini
@@ -1,7 +1,7 @@
 [Info]
 Name=LUXONIX Purity
 Author=Viruzober
-Mail=Den-viruzober@yandex.ru
+Email=Den-viruzober@yandex.ru
 [LUXONIX Purity]
 PluginClass=LUXONIXPurity
 VUI=Purity
