--- a/Plugins/DLL/Reveal Sound Spire/Manifest.ini
+++ b/Plugins/DLL/Reveal Sound Spire/Manifest.ini
@@ -1,7 +1,7 @@
 [Info]
 Name=Reveal Sound Spire
 Author=Viruzober
-Mail=Den-viruzober@yandex.ru
+Email=Den-viruzober@yandex.ru
 [Reveal Sound Spire]
 PluginClass=RevealSoundSpire
 VUI=Spire
