--- a/Plugins/DLL/Spectrasonics Omnisphere/Manifest.ini
+++ b/Plugins/DLL/Spectrasonics Omnisphere/Manifest.ini
@@ -1,7 +1,7 @@
 [Info]
 Name=Omnisphere
 Author=Viruzober
-Mail=Den-viruzober@yandex.ru
+Email=Den-viruzober@yandex.ru
 [Omnisphere]
 PluginClass=Omnisphere
 VUI=Omnisphere
