--- a/Plugins/Subplugins/Native Instruments Kontakt/IlyaEfimovBayanRight/Manifest.ini
+++ b/Plugins/Subplugins/Native Instruments Kontakt/IlyaEfimovBayanRight/Manifest.ini
@@ -1,7 +1,7 @@
 [Info]
 Name=IlyaEfimovBayanRight
 Author=Viruzober
-Mail=Den-viruzober@yandex.ru
+Email=Den-viruzober@yandex.ru
 [IlyaEfimovBayanRight]
 PluginClass=IlyaEfimovBayanRight
 VUI=IlyaEfimovBayanRight
