--- a/Plugins/VUF/Daichi Laboratory Synth1/Manifest.ini
+++ b/Plugins/VUF/Daichi Laboratory Synth1/Manifest.ini
@@ -1,8 +1,7 @@
 [Info]
 Name=Daichi Laboratory Synth1
 Author=A11CF0
-Mail=a11cf0.vk@yandex.ru
+Email=a11cf0.vk@yandex.ru
 [Daichi Laboratory Synth1]
-PluginClass=MagicKeys
 VUI=Synth1
 Module=Synth1
