--- a/Plugins/VUF/ESI MAYA22USBPan/Manifest.ini
+++ b/Plugins/VUF/ESI MAYA22USBPan/Manifest.ini
@@ -1,10 +1,9 @@
 [Info]
 Name=ESI MAYA22USBPan
 Author=Viruzober
-Mail=Den-viruzober@yandex.ru
+Email=Den-viruzober@yandex.ru
 [ESI MAYA22USBPan]
 WTitle=MAYA22 USB
 WClass=MAYA22USB Class
-PluginClass=MagicKeys
 VUI=MAYA22USBPan
 Module=MAYA22USBPan
