--- a/Plugins/VUF/Eventide Blackhole/Manifest.ini
+++ b/Plugins/VUF/Eventide Blackhole/Manifest.ini
@@ -1,8 +1,7 @@
 [Info]
 Name=Eventide Blackhole
 Author=Electrik & Outsider
-Mail=electrik-spb@mail.ru
+Email=electrik-spb@mail.ru
 [Eventide Blackhole]
-PluginClass=MagicKeys
 VUI=Blackhole
 Module=Blackhole
