--- a/Plugins/VUF/Eventide CrushStation/Manifest.ini
+++ b/Plugins/VUF/Eventide CrushStation/Manifest.ini
@@ -1,8 +1,7 @@
 [Info]
 Name=Eventide CrushStation
 Author=Viruzober
-Mail=Den-viruzober@yandex.ru
+Email=Den-viruzober@yandex.ru
 [Eventide CrushStation]
-PluginClass=MagicKeys
 VUI=CrushStation
 Module=Eventide CrushStation
