--- a/Plugins/VUF/Eventide EChannel/Manifest.ini
+++ b/Plugins/VUF/Eventide EChannel/Manifest.ini
@@ -1,8 +1,7 @@
 [Info]
 Name=Eventide EChannel
 Author=Viruzober
-Mail=Den-viruzober@yandex.ru
+Email=Den-viruzober@yandex.ru
 [Eventide EChannel]
-PluginClass=MagicKeys
 VUI=EChannel
 Module=Eventide EChannel
