--- a/Plugins/VUF/Eventide EQ45/Manifest.ini
+++ b/Plugins/VUF/Eventide EQ45/Manifest.ini
@@ -1,8 +1,7 @@
 [Info]
 Name=Eventide EQ45
 Author=Viruzober
-Mail=Den-viruzober@yandex.ru
+Email=Den-viruzober@yandex.ru
 [Eventide EQ45]
-PluginClass=MagicKeys
 VUI=EQ45
 Module=Eventide EQ45
