--- a/Plugins/VUF/Eventide H3000 Band Delays/Manifest.ini
+++ b/Plugins/VUF/Eventide H3000 Band Delays/Manifest.ini
@@ -1,8 +1,7 @@
 [Info]
 Name=Eventide H3000 Band Delays
 Author=Viruzober
-Mail=Den-viruzober@yandex.ru
+Email=Den-viruzober@yandex.ru
 [Eventide H3000 Band Delays]
-PluginClass=MagicKeys
 VUI=H3000 Band Delays
 Module=Eventide H3000 Band Delays
