--- a/Plugins/VUF/Eventide H949 Harmonizer/Manifest.ini
+++ b/Plugins/VUF/Eventide H949 Harmonizer/Manifest.ini
@@ -1,8 +1,7 @@
 [Info]
 Name=Eventide H949 Harmonizer
 Author=Viruzober
-Mail=Den-viruzober@yandex.ru
+Email=Den-viruzober@yandex.ru
 [Eventide H949 Harmonizer]
-PluginClass=MagicKeys
 VUI=H949 Harmonizer
 Module=Eventide H949 Harmonizer
