--- a/Plugins/VUF/Eventide Instant Phaser Mk II/Manifest.ini
+++ b/Plugins/VUF/Eventide Instant Phaser Mk II/Manifest.ini
@@ -1,8 +1,7 @@
 [Info]
 Name=Eventide Instant Phaser Mk II
 Author=Viruzober
-Mail=Den-viruzober@yandex.ru
+Email=Den-viruzober@yandex.ru
 [Eventide Instant Phaser Mk II]
-PluginClass=MagicKeys
 VUI=Instant Phaser Mk II
 Module=Eventide Instant Phaser Mk II
