--- a/Plugins/VUF/Eventide Octavox/Manifest.ini
+++ b/Plugins/VUF/Eventide Octavox/Manifest.ini
@@ -1,8 +1,7 @@
 [Info]
 Name=Eventide Octavox
 Author=Viruzober
-Mail=Den-viruzober@yandex.ru
+Email=Den-viruzober@yandex.ru
 [Eventide Octavox]
-PluginClass=MagicKeys
 VUI=Octavox
 Module=Eventide Octavox
