--- a/Plugins/VUF/Eventide Omnipressor/Manifest.ini
+++ b/Plugins/VUF/Eventide Omnipressor/Manifest.ini
@@ -1,8 +1,7 @@
 [Info]
 Name=Eventide Omnipressor
 Author=Viruzober
-Mail=Den-viruzober@yandex.ru
+Email=Den-viruzober@yandex.ru
 [Eventide Omnipressor]
-PluginClass=MagicKeys
 VUI=Omnipressor
 Module=Eventide Omnipressor
