--- a/Plugins/VUF/Eventide Tverb/Manifest.ini
+++ b/Plugins/VUF/Eventide Tverb/Manifest.ini
@@ -1,8 +1,7 @@
 [Info]
 Name=Eventide Tverb
 Author=Viruzober
-Mail=Den-viruzober@yandex.ru
+Email=Den-viruzober@yandex.ru
 [Eventide Tverb]
-PluginClass=MagicKeys
 VUI=Tverb
 Module=Eventide Tverb
