--- a/Plugins/VUF/Eventide UltraReverb/Manifest.ini
+++ b/Plugins/VUF/Eventide UltraReverb/Manifest.ini
@@ -1,8 +1,7 @@
 [Info]
 Name=Eventide UltraReverb
 Author=Viruzober
-Mail=Den-viruzober@yandex.ru
+Email=Den-viruzober@yandex.ru
 [Eventide UltraReverb]
-PluginClass=MagicKeys
 VUI=UltraReverb
 Module=Eventide UltraReverb
