--- a/Plugins/VUF/FabFilter Micro/Manifest.ini
+++ b/Plugins/VUF/FabFilter Micro/Manifest.ini
@@ -1,8 +1,7 @@
 [Info]
 Name=FabFilter Micro
 Author=Viruzober
-Mail=Den-viruzober@yandex.ru
+Email=Den-viruzober@yandex.ru
 [FabFilter Micro]
-PluginClass=MagicKeys
 VUI=Micro
 Module=FabFilter Micro
