--- a/Plugins/VUF/FabFilter Pro-MB/Manifest.ini
+++ b/Plugins/VUF/FabFilter Pro-MB/Manifest.ini
@@ -1,8 +1,7 @@
 [Info]
 Name=FabFilter Pro-MB
 Author=Viruzober
-Mail=Den-viruzober@yandex.ru
+Email=Den-viruzober@yandex.ru
 [FabFilter Pro-MB]
-PluginClass=MagicKeys
 VUI=Pro-MB
 Module=FabFilter Pro-MB
