--- a/Plugins/VUF/FabFilter Pro-Q 3/Manifest.ini
+++ b/Plugins/VUF/FabFilter Pro-Q 3/Manifest.ini
@@ -1,8 +1,7 @@
 [Info]
 Name=FabFilter Pro-Q 3
 Author=Viruzober
-Mail=Den-viruzober@yandex.ru
+Email=Den-viruzober@yandex.ru
 [FabFilter Pro-Q 3]
-PluginClass=MagicKeys
 VUI=Pro-Q 3
 Module=FabFilter Pro-Q 3
