--- a/Plugins/VUF/FabFilter Saturn 2/Manifest.ini
+++ b/Plugins/VUF/FabFilter Saturn 2/Manifest.ini
@@ -1,8 +1,7 @@
 [Info]
 Name=FabFilter Saturn 2
 Author=Viruzober
-Mail=Den-viruzober@yandex.ru
+Email=Den-viruzober@yandex.ru
 [FabFilter Saturn 2]
-PluginClass=MagicKeys
 VUI=Saturn 2
 Module=FabFilter Saturn 2
