--- a/Plugins/VUF/FabFilter Simplon/Manifest.ini
+++ b/Plugins/VUF/FabFilter Simplon/Manifest.ini
@@ -1,8 +1,7 @@
 [Info]
 Name=FabFilter Simplon
 Author=Viruzober
-Mail=Den-viruzober@yandex.ru
+Email=Den-viruzober@yandex.ru
 [FabFilter Simplon]
-PluginClass=MagicKeys
 VUI=Simplon
 Module=FabFilter Simplon
