--- a/Plugins/VUF/FabFilter Twin 2/Manifest.ini
+++ b/Plugins/VUF/FabFilter Twin 2/Manifest.ini
@@ -1,8 +1,7 @@
 [Info]
 Name=FabFilter Twin 2
 Author=Viruzober
-Mail=Den-viruzober@yandex.ru
+Email=Den-viruzober@yandex.ru
 [FabFilter Twin 2]
-PluginClass=MagicKeys
 VUI=Twin 2
 Module=FabFilter Twin 2
