--- a/Plugins/VUF/KVR Audio PlugSound/Manifest.ini
+++ b/Plugins/VUF/KVR Audio PlugSound/Manifest.ini
@@ -1,12 +1,10 @@
 [Info]
 Name=KVR Audio PlugSound
 Author=Viruzober
-Mail=Den-viruzober@yandex.ru
+Email=Den-viruzober@yandex.ru
 [KVR Audio PlugSound]
-PluginClass=MagicKeys
 VUI=PlugSound
 Module=PS0
 [KVR Audio PlugSound Free]
-PluginClass=MagicKeys
 VUI=PlugSoundFree
 Module=Plugsound
