--- a/Plugins/VUF/LennarDigital Sylenth1/Manifest.ini
+++ b/Plugins/VUF/LennarDigital Sylenth1/Manifest.ini
@@ -1,8 +1,7 @@
 [Info]
 Name=LennarDigital Sylenth1
 Author=Viruzober
-Mail=Den-viruzober@yandex.ru
+Email=Den-viruzober@yandex.ru
 [LennarDigital Sylenth1]
-PluginClass=MagicKeys
 VUI=Sylenth1
 Module=Sylenth1
