--- a/Plugins/VUF/LinPlug Albino3/Manifest.ini
+++ b/Plugins/VUF/LinPlug Albino3/Manifest.ini
@@ -1,8 +1,7 @@
 [Info]
 Name=LinPlug Albino3
 Author=Electrik & Outsider
-Mail=electrik-spb@mail.ru
+Email=electrik-spb@mail.ru
 [LinPlug Albino3]
-PluginClass=MagicKeys
 VUI=Albino3
 Module=Albino3
