--- a/Plugins/VUF/RGC Audio sfz/Manifest.ini
+++ b/Plugins/VUF/RGC Audio sfz/Manifest.ini
@@ -1,8 +1,7 @@
 [Info]
 Name=RGC Audio sfz
 Author=Electrik & Outsider
-Mail=electrik-spb@mail.ru
+Email=electrik-spb@mail.ru
 [RGC Audio sfz]
-PluginClass=MagicKeys
 VUI=sfz
 Module=sfz
