--- a/Plugins/VUF/Rob Papen Predator/Manifest.ini
+++ b/Plugins/VUF/Rob Papen Predator/Manifest.ini
@@ -1,8 +1,7 @@
 [Info]
 Name=Rob Papen Predator
 Author=Viruzober
-Mail=den-viruzober@yandex.ru
+Email=den-viruzober@yandex.ru
 [Rob Papen Predator]
-PluginClass=MagicKeys
 VUI=Predator
 Module=Predator
