--- a/Plugins/VUF/Roland JUPITER-8/Manifest.ini
+++ b/Plugins/VUF/Roland JUPITER-8/Manifest.ini
@@ -1,8 +1,7 @@
 [Info]
 Name=Roland JUPITER-8
 Author=Electrik
-Mail=electrik-spb@mail.ru
+Email=electrik-spb@mail.ru
 [Roland JUPITER-8]
-PluginClass=MagicKeys
 VUI=JUPITER-8
 Module=JUPITER-8
