--- a/Plugins/VUF/Sonic Academy ANA/Manifest.ini
+++ b/Plugins/VUF/Sonic Academy ANA/Manifest.ini
@@ -1,12 +1,10 @@
 [Info]
 Name=Sonic Academy ANA
 Author=Viruzober
-Mail=Den-viruzober@yandex.ru
+Email=Den-viruzober@yandex.ru
 [Sonic Academy ANA]
-PluginClass=MagicKeys
 VUI=ANA
 Module=A.N.A
 [Sonic Academy ANA 2]
-PluginClass=MagicKeys
 VUI=ANA 2
 Module=ANA2
