--- a/Plugins/VUF/Sonic Academy KICK Nicky Romero Edition/Manifest.ini
+++ b/Plugins/VUF/Sonic Academy KICK Nicky Romero Edition/Manifest.ini
@@ -1,8 +1,7 @@
 [Info]
 Name=Sonic Academy KICK Nicky Romero Edition
 Author=Viruzober
-Mail=Den-viruzober@yandex.ru
+Email=Den-viruzober@yandex.ru
 [Sonic Academy KICK Nicky Romero Edition]
-PluginClass=MagicKeys
 VUI=KICK Nicky Romero Edition
 Module=KICK Nicky Romero Edition
