--- a/Plugins/VUF/Sonic Academy Kick 2/Manifest.ini
+++ b/Plugins/VUF/Sonic Academy Kick 2/Manifest.ini
@@ -1,8 +1,7 @@
 [Info]
 Name=Sonic Academy Kick 2
 Author=Electrik & Outsider
-Mail=electrik-spb@mail.ru
+Email=electrik-spb@mail.ru
 [Sonic Academy Kick 2]
-PluginClass=MagicKeys
 VUI=Kick 2
 Module=Kick 2
