--- a/Plugins/VUF/Synapse Audio DUNE/Manifest.ini
+++ b/Plugins/VUF/Synapse Audio DUNE/Manifest.ini
@@ -1,12 +1,10 @@
 [Info]
 Name=Synapse Audio DUNE
 Author=Viruzober
-Mail=Den-viruzober@yandex.ru
+Email=Den-viruzober@yandex.ru
 [Synapse Audio DUNE 2]
-PluginClass=MagicKeys
 VUI=DUNE 2
 Module=DUNE 2
 [Synapse Audio DUNE 3]
-PluginClass=MagicKeys
 VUI=DUNE 3
 Module=DUNE 3
