--- a/Plugins/VUF/Tone2 Gladiator/Manifest.ini
+++ b/Plugins/VUF/Tone2 Gladiator/Manifest.ini
@@ -1,8 +1,7 @@
 [Info]
 Name=Tone2 Gladiator
 Author=NikitaK
-Mail=kolokolchicov.n@gmail.com
+Email=kolokolchicov.n@gmail.com
 [Tone2 Gladiator]
-PluginClass=MagicKeys
 VUI=Gladiator
 Module=Gladiator
