--- a/Plugins/VUF/Tone2 RayBlaster/Manifest.ini
+++ b/Plugins/VUF/Tone2 RayBlaster/Manifest.ini
@@ -1,8 +1,7 @@
 [Info]
 Name=Tone2 RayBlaster
 Author=NikitaK
-Mail=kolokolchicov.n@gmail.com
+Email=kolokolchicov.n@gmail.com
 [Tone2 RayBlaster]
-PluginClass=MagicKeys
 VUI=RayBlaster
 Module=RayBlaster
