--- a/Plugins/VUF/Tone2 Saurus/Manifest.ini
+++ b/Plugins/VUF/Tone2 Saurus/Manifest.ini
@@ -1,8 +1,7 @@
 [Info]
 Name=Tone2 Saurus
 Author=Viruzober
-Mail=Den-viruzober@yandex.ru
+Email=Den-viruzober@yandex.ru
 [Tone2 Saurus]
-PluginClass=MagicKeys
 VUI=Saurus
 Module=Saurus
