--- a/Plugins/VUF/Toontrack EZKeys/Manifest.ini
+++ b/Plugins/VUF/Toontrack EZKeys/Manifest.ini
@@ -1,8 +1,7 @@
 [Info]
 Name=Toontrack EZKeys
 Author=NikitaK
-Mail=kolokolchicov.n@gmail.com
+Email=kolokolchicov.n@gmail.com
 [Toontrack EZKeys]
-PluginClass=MagicKeys
 VUI=EZKeys
 Module=EZKeys
