--- a/Plugins/VUF/Vember Audio Surge/Manifest.ini
+++ b/Plugins/VUF/Vember Audio Surge/Manifest.ini
@@ -1,8 +1,7 @@
 [Info]
 Name=Vember Audio Surge
 Author=NikitaK
-Mail=kolokolchicov.n@gmail.com
+Email=kolokolchicov.n@gmail.com
 [Vember Audio Surge]
-PluginClass=MagicKeys
 VUI=Surge
 Module=Surge
