--- a/Plugins/VUF/Xfer Records LFOTool/Manifest.ini
+++ b/Plugins/VUF/Xfer Records LFOTool/Manifest.ini
@@ -1,8 +1,7 @@
 [Info]
 Name=Xfer Records LFOTool
 Author=NikitaK
-Mail=kolokolchicov.n@gmail.com
+Email=kolokolchicov.n@gmail.com
 [Xfer Records LFOTool]
-PluginClass=MagicKeys
 VUI=LFOTool
 Module=LFOTool
