--- a/Plugins/VUF/Zynaptiq UNFILTER/Manifest.ini
+++ b/Plugins/VUF/Zynaptiq UNFILTER/Manifest.ini
@@ -1,8 +1,7 @@
 [Info]
 Name=Zynaptiq UNFILTER
 Author=Electrik & Outsider
-Mail=electrik-spb@mail.ru
+Email=electrik-spb@mail.ru
 [Zynaptiq UNFILTER]
-PluginClass=MagicKeys
 VUI=UNFILTER
 Module=UNFILTER
