--- a/Plugins/DLL/Native Instruments Kontakt/Manifest.ini
+++ b/Plugins/DLL/Native Instruments Kontakt/Manifest.ini
@@ -1,7 +1,7 @@
 [Info]
 Name=Native Instruments Kontakt
 Author=Viruzober
-Mail=Den-viruzober@yandex.ru
+Email=Den-viruzober@yandex.ru
 [Native Instruments Kontakt]
 PluginClass=Kontakt
 VUI=Kontakt
