--- a/Plugins/DLL/Xfer Records Serum/Manifest.ini
+++ b/Plugins/DLL/Xfer Records Serum/Manifest.ini
@@ -1,7 +1,7 @@
 [Info]
 Name=Xfer Records Serum
 Author=Viruzober
-Mail=Den-viruzober@yandex.ru
+Email=Den-viruzober@yandex.ru
 [Xfer Records Serum]
 PluginClass=Serum
 VUI=Serum
