--- a/Plugins/DLL/reFX Nexus/Manifest.ini
+++ b/Plugins/DLL/reFX Nexus/Manifest.ini
@@ -1,7 +1,7 @@
 [Info]
 Name=Nexus
 Author=Viruzober
-Mail=Den-viruzober@yandex.ru
+Email=Den-viruzober@yandex.ru
 [NexusBridge]
 PluginClass=Nexus
 VUI=Nexus
