--- a/Plugins/Subplugins/Native Instruments Kontakt/IlyaEfimovBayanLeft/Manifest.ini
+++ b/Plugins/Subplugins/Native Instruments Kontakt/IlyaEfimovBayanLeft/Manifest.ini
@@ -1,7 +1,7 @@
 [Info]
 Name=IlyaEfimovBayanLeft
 Author=Viruzober
-Mail=Den-viruzober@yandex.ru
+Email=Den-viruzober@yandex.ru
 [IlyaEfimovBayanLeft]
 PluginClass=IlyaEfimovBayanLeft
 VUI=IlyaEfimovBayanLeft
