--- a/Plugins/VUF/Eventide 2016 Stereo Room/Manifest.ini
+++ b/Plugins/VUF/Eventide 2016 Stereo Room/Manifest.ini
@@ -1,8 +1,7 @@
 [Info]
 Name=Eventide 2016 Stereo Room
 Author=Electrik & Outsider
-Mail=electrik-spb@mail.ru
+Email=electrik-spb@mail.ru
 [Eventide 2016 Stereo Room]
-PluginClass=MagicKeys
 VUI=2016 Stereo Room
 Module=2016 Stereo Room
