--- a/Plugins/VUF/Eventide Crystals/Manifest.ini
+++ b/Plugins/VUF/Eventide Crystals/Manifest.ini
@@ -1,8 +1,7 @@
 [Info]
 Name=Eventide Crystals
 Author=Viruzober
-Mail=Den-viruzober@yandex.ru
+Email=Den-viruzober@yandex.ru
 [Eventide Crystals]
-PluginClass=MagicKeys
 VUI=Crystals
 Module=Eventide Crystals
