--- a/Plugins/VUF/Eventide EQ65/Manifest.ini
+++ b/Plugins/VUF/Eventide EQ65/Manifest.ini
@@ -1,8 +1,7 @@
 [Info]
 Name=Eventide EQ65
 Author=Viruzober
-Mail=Den-viruzober@yandex.ru
+Email=Den-viruzober@yandex.ru
 [Eventide EQ65]
-PluginClass=MagicKeys
 VUI=EQ65
 Module=Eventide EQ65
