--- a/Plugins/VUF/Eventide H910 Dual Harmonizer/Manifest.ini
+++ b/Plugins/VUF/Eventide H910 Dual Harmonizer/Manifest.ini
@@ -1,8 +1,7 @@
 [Info]
 Name=Eventide H910 Dual Harmonizer
 Author=Viruzober
-Mail=Den-viruzober@yandex.ru
+Email=Den-viruzober@yandex.ru
 [Eventide H910 Dual Harmonizer]
-PluginClass=MagicKeys
 VUI=H910 Dual Harmonizer
 Module=Eventide H910 Dual Harmonizer
