--- a/Plugins/VUF/Eventide H910 Harmonizer/Manifest.ini
+++ b/Plugins/VUF/Eventide H910 Harmonizer/Manifest.ini
@@ -1,8 +1,7 @@
 [Info]
 Name=Eventide H910 Harmonizer
 Author=Viruzober
-Mail=Den-viruzober@yandex.ru
+Email=Den-viruzober@yandex.ru
 [Eventide H910 Harmonizer]
-PluginClass=MagicKeys
 VUI=H910 Harmonizer
 Module=Eventide H910 Harmonizer
