--- a/Plugins/VUF/Eventide Instant Flanger Mk II/Manifest.ini
+++ b/Plugins/VUF/Eventide Instant Flanger Mk II/Manifest.ini
@@ -1,8 +1,7 @@
 [Info]
 Name=Eventide Instant Flanger Mk II
 Author=Viruzober
-Mail=Den-viruzober@yandex.ru
+Email=Den-viruzober@yandex.ru
 [Eventide Instant Flanger Mk II]
-PluginClass=MagicKeys
 VUI=Instant Flanger Mk II
 Module=Eventide Instant Flanger Mk II
