--- a/Plugins/VUF/Eventide MangledVerb/Manifest.ini
+++ b/Plugins/VUF/Eventide MangledVerb/Manifest.ini
@@ -1,8 +1,7 @@
 [Info]
 Name=Eventide MangledVerb
 Author=Viruzober
-Mail=Den-viruzober@yandex.ru
+Email=Den-viruzober@yandex.ru
 [Eventide MangledVerb]
-PluginClass=MagicKeys
 VUI=MangledVerb
 Module=Eventide MangledVerb
