--- a/Plugins/VUF/Eventide MicroPitch/Manifest.ini
+++ b/Plugins/VUF/Eventide MicroPitch/Manifest.ini
@@ -1,8 +1,7 @@
 [Info]
 Name=Eventide MicroPitch
 Author=Viruzober
-Mail=Den-viruzober@yandex.ru
+Email=Den-viruzober@yandex.ru
 [Eventide MicroPitch]
-PluginClass=MagicKeys
 VUI=MicroPitch
 Module=Eventide MicroPitch
