--- a/Plugins/VUF/Eventide Physion/Manifest.ini
+++ b/Plugins/VUF/Eventide Physion/Manifest.ini
@@ -1,8 +1,7 @@
 [Info]
 Name=Eventide Physion
 Author=Viruzober
-Mail=Den-viruzober@yandex.ru
+Email=Den-viruzober@yandex.ru
 [Eventide Physion]
-PluginClass=MagicKeys
 VUI=Physion
 Module=Eventide Physion
