--- a/Plugins/VUF/Eventide Precision Time Align/Manifest.ini
+++ b/Plugins/VUF/Eventide Precision Time Align/Manifest.ini
@@ -1,8 +1,7 @@
 [Info]
 Name=Eventide Precision Time Align
 Author=Viruzober
-Mail=Den-viruzober@yandex.ru
+Email=Den-viruzober@yandex.ru
 [Eventide Precision Time Align]
-PluginClass=MagicKeys
 VUI=Precision Time Align
 Module=Eventide Precision Time Align
