--- a/Plugins/VUF/Eventide Precision Time Delay/Manifest.ini
+++ b/Plugins/VUF/Eventide Precision Time Delay/Manifest.ini
@@ -1,8 +1,7 @@
 [Info]
 Name=Eventide Precision Time Delay
 Author=Viruzober
-Mail=Den-viruzober@yandex.ru
+Email=Den-viruzober@yandex.ru
 [Eventide Precision Time Delay]
-PluginClass=MagicKeys
 VUI=Precision Time Delay
 Module=Eventide Precision Time Delay
