--- a/Plugins/VUF/Eventide Quadravox/Manifest.ini
+++ b/Plugins/VUF/Eventide Quadravox/Manifest.ini
@@ -1,8 +1,7 @@
 [Info]
 Name=Eventide Quadravox
 Author=Viruzober
-Mail=Den-viruzober@yandex.ru
+Email=Den-viruzober@yandex.ru
 [Eventide Quadravox]
-PluginClass=MagicKeys
 VUI=Quadravox
 Module=Eventide Quadravox
