--- a/Plugins/VUF/Eventide Rotary Mod/Manifest.ini
+++ b/Plugins/VUF/Eventide Rotary Mod/Manifest.ini
@@ -1,8 +1,7 @@
 [Info]
 Name=Eventide Rotary Mod
 Author=Viruzober
-Mail=Den-viruzober@yandex.ru
+Email=Den-viruzober@yandex.ru
 [Eventide Rotary Mod]
-PluginClass=MagicKeys
 VUI=Rotary Mod
 Module=Eventide Rotary Mod
