--- a/Plugins/VUF/Eventide SP2016 Reverb/Manifest.ini
+++ b/Plugins/VUF/Eventide SP2016 Reverb/Manifest.ini
@@ -1,8 +1,7 @@
 [Info]
 Name=Eventide SP2016 Reverb
 Author=Viruzober
-Mail=Den-viruzober@yandex.ru
+Email=Den-viruzober@yandex.ru
 [Eventide SP2016 Reverb]
-PluginClass=MagicKeys
 VUI=SP2016 Reverb
 Module=Eventide SP2016 Reverb
