--- a/Plugins/VUF/Eventide ShimmerVerb/Manifest.ini
+++ b/Plugins/VUF/Eventide ShimmerVerb/Manifest.ini
@@ -1,8 +1,7 @@
 [Info]
 Name=Eventide ShimmerVerb
 Author=Viruzober
-Mail=Den-viruzober@yandex.ru
+Email=Den-viruzober@yandex.ru
 [Eventide ShimmerVerb]
-PluginClass=MagicKeys
 VUI=ShimmerVerb
 Module=Eventide ShimmerVerb
