--- a/Plugins/VUF/Eventide Spring/Manifest.ini
+++ b/Plugins/VUF/Eventide Spring/Manifest.ini
@@ -1,8 +1,7 @@
 [Info]
 Name=Eventide Spring
 Author=Viruzober
-Mail=Den-viruzober@yandex.ru
+Email=Den-viruzober@yandex.ru
 [Eventide Spring]
-PluginClass=MagicKeys
 VUI=Spring
 Module=Eventide Spring
