--- a/Plugins/VUF/Eventide TriceraChorus/Manifest.ini
+++ b/Plugins/VUF/Eventide TriceraChorus/Manifest.ini
@@ -1,8 +1,7 @@
 [Info]
 Name=Eventide TriceraChorus
 Author=Viruzober
-Mail=Den-viruzober@yandex.ru
+Email=Den-viruzober@yandex.ru
 [Eventide TriceraChorus]
-PluginClass=MagicKeys
 VUI=TriceraChorus
 Module=Eventide TriceraChorus
