--- a/Plugins/VUF/Eventide UltraChannel/Manifest.ini
+++ b/Plugins/VUF/Eventide UltraChannel/Manifest.ini
@@ -1,8 +1,7 @@
 [Info]
 Name=Eventide UltraChannel
 Author=Viruzober
-Mail=Den-viruzober@yandex.ru
+Email=Den-viruzober@yandex.ru
 [Eventide UltraChannel]
-PluginClass=MagicKeys
 VUI=UltraChannel
 Module=Eventide UltraChannel
