--- a/Plugins/VUF/Eventide UltraTap/Manifest.ini
+++ b/Plugins/VUF/Eventide UltraTap/Manifest.ini
@@ -1,8 +1,7 @@
 [Info]
 Name=Eventide UltraTap
 Author=Viruzober
-Mail=Den-viruzober@yandex.ru
+Email=Den-viruzober@yandex.ru
 [Eventide UltraTap]
-PluginClass=MagicKeys
 VUI=UltraTap
 Module=Eventide UltraTap
