--- a/Plugins/VUF/FabFilter One/Manifest.ini
+++ b/Plugins/VUF/FabFilter One/Manifest.ini
@@ -1,8 +1,7 @@
 [Info]
 Name=FabFilter One
 Author=Viruzober
-Mail=Den-viruzober@yandex.ru
+Email=Den-viruzober@yandex.ru
 [FabFilter One]
-PluginClass=MagicKeys
 VUI=One
 Module=FabFilter One
