--- a/Plugins/VUF/FabFilter Pro-C 2/Manifest.ini
+++ b/Plugins/VUF/FabFilter Pro-C 2/Manifest.ini
@@ -1,8 +1,7 @@
 [Info]
 Name=FabFilter Pro-C 2
 Author=Viruzober
-Mail=Den-viruzober@yandex.ru
+Email=Den-viruzober@yandex.ru
 [FabFilter Pro-C 2]
-PluginClass=MagicKeys
 VUI=Pro-C 2
 Module=FabFilter Pro-C 2
