--- a/Plugins/VUF/FabFilter Pro-DS/Manifest.ini
+++ b/Plugins/VUF/FabFilter Pro-DS/Manifest.ini
@@ -1,8 +1,7 @@
 [Info]
 Name=FabFilter Pro-DS
 Author=Viruzober
-Mail=Den-viruzober@yandex.ru
+Email=Den-viruzober@yandex.ru
 [FabFilter Pro-DS]
-PluginClass=MagicKeys
 VUI=Pro-DS
 Module=FabFilter Pro-DS
