--- a/Plugins/VUF/FabFilter Pro-G/Manifest.ini
+++ b/Plugins/VUF/FabFilter Pro-G/Manifest.ini
@@ -1,8 +1,7 @@
 [Info]
 Name=FabFilter Pro-G
 Author=Viruzober
-Mail=Den-viruzober@yandex.ru
+Email=Den-viruzober@yandex.ru
 [FabFilter Pro-G]
-PluginClass=MagicKeys
 VUI=Pro-G
 Module=FabFilter Pro-G
