--- a/Plugins/VUF/FabFilter Pro-R/Manifest.ini
+++ b/Plugins/VUF/FabFilter Pro-R/Manifest.ini
@@ -1,8 +1,7 @@
 [Info]
 Name=FabFilter Pro-R
 Author=Viruzober
-Mail=Den-viruzober@yandex.ru
+Email=Den-viruzober@yandex.ru
 [FabFilter Pro-R]
-PluginClass=MagicKeys
 VUI=Pro-R
 Module=FabFilter Pro-R
