--- a/Plugins/VUF/FabFilter Timeless 3/Manifest.ini
+++ b/Plugins/VUF/FabFilter Timeless 3/Manifest.ini
@@ -1,8 +1,7 @@
 [Info]
 Name=FabFilter Timeless 3
 Author=Viruzober
-Mail=Den-viruzober@yandex.ru
+Email=Den-viruzober@yandex.ru
 [FabFilter Timeless 3]
-PluginClass=MagicKeys
 VUI=Timeless 3
 Module=FabFilter Timeless 3
