--- a/Plugins/VUF/FabFilter Volcano 2/Manifest.ini
+++ b/Plugins/VUF/FabFilter Volcano 2/Manifest.ini
@@ -1,8 +1,7 @@
 [Info]
 Name=FabFilter Volcano 2
 Author=Viruzober
-Mail=Den-viruzober@yandex.ru
+Email=Den-viruzober@yandex.ru
 [FabFilter Volcano 2]
-PluginClass=MagicKeys
 VUI=Volcano 2
 Module=FabFilter Volcano 2
