--- a/Plugins/VUF/Roland D-50/Manifest.ini
+++ b/Plugins/VUF/Roland D-50/Manifest.ini
@@ -1,8 +1,7 @@
 [Info]
 Name=Roland D-50
 Author=Electrik
-Mail=electrik-spb@mail.ru
+Email=electrik-spb@mail.ru
 [Roland D-50]
-PluginClass=MagicKeys
 VUI=D-50
 Module=D-50
