--- a/Plugins/VUF/Roland SYSTEM-1/Manifest.ini
+++ b/Plugins/VUF/Roland SYSTEM-1/Manifest.ini
@@ -1,8 +1,7 @@
 [Info]
 Name=Roland SYSTEM-1
 Author=Electrik & Outsider
-Mail=electrik-spb@mail.ru
+Email=electrik-spb@mail.ru
 [Roland SYSTEM-1]
-PluginClass=MagicKeys
 VUI=SYSTEM-1
 Module=SYSTEM-1
