--- a/Plugins/VUF/Tone2 Electra/Manifest.ini
+++ b/Plugins/VUF/Tone2 Electra/Manifest.ini
@@ -1,8 +1,7 @@
 [Info]
 Name=Tone2 Electra
 Author=Viruzober
-Mail=Den-viruzober@yandex.ru
+Email=Den-viruzober@yandex.ru
 [Tone2 Electra]
-PluginClass=MagicKeys
 VUI=Electra
 Module=ElectraX
