--- a/Plugins/VUF/Tone2 Icarus/Manifest.ini
+++ b/Plugins/VUF/Tone2 Icarus/Manifest.ini
@@ -1,8 +1,7 @@
 [Info]
 Name=Tone2 Icarus
 Author=Electrik & Outsider
-Mail=electrik-spb@mail.ru
+Email=electrik-spb@mail.ru
 [Tone2 Icarus]
-PluginClass=MagicKeys
 VUI=Icarus
 Module=Icarus
